--- a/.gitignore
+++ b/.gitignore
@@ -119,4 +119,5 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/goland+all,go
 
 # Custom
-resources/application_config.yaml
+application_config.yaml
+.env
