chore: Update README.md

--- a/application_config_example.yaml
+++ b/application_config_example.yaml
@@ -2,7 +2,7 @@ core:
   app_name: ""
   port: 8080
   env: "dev" # dev / stage / prod
-  secret_key:
+  secret_key: ""
 
 datasource:
   username: ""
