--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       networks:
         - app-network
       volumes:
-        - /usr/docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
+        - /usr/local/docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
       extra_hosts:
         - "host.docker.internal:host-gateway"
 
