--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
     go-push-server:
       build:
         dockerfile: ./Dockerfile
-      restart: always
+      restart: unless-stopped
       environment:
         - PORT=${WEB_PORT}
       ports:
@@ -20,7 +20,7 @@ services:
       container_name: mysql-8.0.30
       command:
         - --default-authentication-plugin=mysql_native_password
-      restart: always
+      restart: unless-stopped
       environment:
         - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
         - TZ=Asia/Seoul
@@ -39,7 +39,7 @@ services:
       command:
         - /usr/local/etc/redis/redis.conf
         - --requirepass ${REDIS_PASSWORD}
-      restart: always
+      restart: unless-stopped
       environment:
         - TZ=Asia/Seoul
       ports:
@@ -47,7 +47,7 @@ services:
       networks:
         - app-network
       volumes:
-        - /usr/local/docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
+        - /usr/local/docker/redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
       extra_hosts:
         - "host.docker.internal:host-gateway"
 
