feat: 프로젝트의 `Client Key` 갱신 API 추가 * CORS 이슈를 해결하기 위해 허용 메소드가 추가되었습니다. * 도커 컴포즈에서 레디스가 설정 파일을 읽지 못하는 문제를 수정하였습니다. * README를 업데이트하였습니다.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       networks:
         - app-network
       volumes:
+        - /usr/local/docker/redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
         - /usr/local/docker/redis:/usr/local/etc/redis
       extra_hosts:
         - "host.docker.internal:host-gateway"
